--- a/index.html
+++ b/index.html
@@ -3,79 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <!-- Leaflet.js -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <!-- Custom CSS -->
+    <title>Menna Elwan's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Loader -->
-    <div id="loader" style="display: none;"></div>
-
-    <!-- Header -->
-    <header class="bg-primary text-white text-center py-5">
+    <header>
         <h1>Welcome to My Portfolio</h1>
-        <p>Explore my projects and learn more about me</p>
+        <p>Mobile Developer | Cross-Platform Expert</p>
     </header>
-
-    <!-- Projects Section -->
-    <section id="projects" class="container my-5">
-        <h2 class="text-center">Projects</h2>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h3 class="card-title">Project 1</h3>
-                        <p class="card-text">Description of the first project.</p>
-                        <a href="https://github.com/your-username/project-repo" class="btn btn-primary" target="_blank">View on GitHub</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h3 class="card-title">Project 2</h3>
-                        <p class="card-text">Description of the second project.</p>
-                        <a href="https://github.com/your-username/project-repo" class="btn btn-primary" target="_blank">View on GitHub</a>
-                    </div>
-                </div>
-            </div>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Fashion App</h3>
+            <p>A Flutter-based application integrating APIs, focused on user-friendly interfaces for fashion lovers.</p>
+            <a href="https://github.com/menna3lwan/fashion-app">View on GitHub</a>
         </div>
+        <div class="project">
+            <h3>News App</h3>
+            <p>An Android (Kotlin)-based app with Firebase for real-time updates, delivering the latest news efficiently.</p>
+            <a href="https://github.com/menna3lwan/news-app">View on GitHub</a>
+        </div>
+        <div class="project">
+            <h3>Todo App</h3>
+            <p>A Flutter-based productivity tool with API integration for seamless task management.</p>
+            <a href="https://github.com/menna3lwan/todo-app">View on GitHub</a>
+        </div>
+        <!-- Add more projects similarly -->
     </section>
-
-    <!-- Map Section -->
-    <section id="map-section" class="my-5">
-        <h2 class="text-center">Find Me</h2>
-        <div id="map" style="height: 400px; width: 100%;"></div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-4">
-        <p>© 2025 Your Name. All rights reserved.</p>
+    <footer>
+        <p>© 2025 Menna Maher Elwan | <a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank" style="color: #fff;">LinkedIn</a> | <a href="https://github.com/menna3lwan" target="_blank" style="color: #fff;">GitHub</a></p>
     </footer>
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Initialize Leaflet Map -->
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var map = L.map('map').setView([51.505, -0.09], 13); // Example coordinates (London)
-
-            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-            }).addTo(map);
-
-            L.marker([51.505, -0.09]).addTo(map)
-                .bindPopup('Your Location')
-                .openPopup();
-        });
-    </script>
 </body>
 </html>
