--- a/index.html
+++ b/index.html
@@ -3,35 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menna Elwan's Portfolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>Mobile Developer | Cross-Platform Expert</p>
+        <img src="profile.jpg" alt="Your Profile Picture">
+        <h1>Sami Ullah</h1>
+        <p>Full Stack Developer</p>
+        <div class="social-icons">
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="mailto:someone@example.com" target="_blank"><i class="fas fa-envelope"></i></a>
+        </div>
     </header>
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Fashion App</h3>
-            <p>A Flutter-based application integrating APIs, focused on user-friendly interfaces for fashion lovers.</p>
-            <a href="https://github.com/menna3lwan/fashion-app">View on GitHub</a>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I am Sami Ullah, a passionate Full Stack Developer with expertise in modern web technologies. I love creating efficient and user-friendly web applications.</p>
+        <div class="info">
+            <div>
+                <strong>Phone:</strong> +91 979563123
+            </div>
+            <div>
+                <strong>Email:</strong> muftisami2010@gmail.com
+            </div>
+            <div>
+                <strong>Website:</strong> muftisamiullah
+            </div>
+            <div>
+                <strong>Company:</strong> Bror Infotech
+            </div>
         </div>
-        <div class="project">
-            <h3>News App</h3>
-            <p>An Android (Kotlin)-based app with Firebase for real-time updates, delivering the latest news efficiently.</p>
-            <a href="https://github.com/menna3lwan/news-app">View on GitHub</a>
-        </div>
-        <div class="project">
-            <h3>Todo App</h3>
-            <p>A Flutter-based productivity tool with API integration for seamless task management.</p>
-            <a href="https://github.com/menna3lwan/todo-app">View on GitHub</a>
-        </div>
-        <!-- Add more projects similarly -->
     </section>
     <footer>
-        <p>© 2025 Menna Maher Elwan | <a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank" style="color: #fff;">LinkedIn</a> | <a href="https://github.com/menna3lwan" target="_blank" style="color: #fff;">GitHub</a></p>
+        <p>© 2025 Sami Ullah</p>
     </footer>
 </body>
 </html>
