--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t js-fullheight">
                             <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-                                <div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
+                                <div class="profile-thumb" style="background: url(images\user-3.jpeg);"></div>
                                 <h1><span>Menna Elwan</span></h1>
                                 <span class="cd-intro">
                                     <span class="cd-headline clip is-full-width">
@@ -76,7 +76,7 @@
                                 </span>
                                 <p>
                                     <ul class="fh5co-social-icons">
-                                        <li><a href="https://www.linkedin.com/in/menna-elwan/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
                                         <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
                                         <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
                                         <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
@@ -111,7 +111,7 @@
                         <p>I am a Mobile Developer with experience in cross-platform app development using Java, Dart, Kotlin, and Swift. Skilled in optimizing performance, integrating backend services, and enhancing user experience. Committed to delivering high-quality, secure, and scalable apps.</p>
                         <p>Currently pursuing a degree in Computer Science and Artificial Intelligence at Benha University, expected to graduate in 2026.</p>
                         <ul class="fh5co-social-icons">
-                            <li><a href="https://www.linkedin.com/in/menna-elwan/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
                             <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
                             <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
                             <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
@@ -129,7 +129,7 @@
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                         <h2>Hire Me!</h2>
-                        <p><a href="https://docs.google.com/document/d/e/2PACX-1vTfUjd4MZ8aOMXGUkXbyPxbyDL4kDS2HuiZXEtLLGXljlex-wtbHfOGKR772vwnnll7sbxxUbA8pZag/pub" class="btn btn-default btn-lg">Download CV</a></p>
+                        <p><a href="https://docs.google.com/document/d/e/2PACX-1vSXK6i8ydfJuDxqoYrL8DVANDnPfCmcoWEK8AzRWKVeDcjGe0bcyoVSGk9JVFGlTVPH24ncjF0gThhn/pub" class="btn btn-default btn-lg">Download CV</a></p>
                     </div>
                 </div>
             </div>
