--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t js-fullheight">
                             <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-                                <div class="profile-thumb" style="background: url(images\user-3.jpeg);"></div>
+                                <div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
                                 <h1><span>Menna Elwan</span></h1>
                                 <span class="cd-intro">
                                     <span class="cd-headline clip is-full-width">
