--- a/index.html
+++ b/index.html
@@ -1,184 +1,123 @@
-<!DOCTYPE HTML>
-<html>
-
+<!doctype html>
+<html lang="en" class="no-js">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Menna Elwan</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio website for Menna Elwan, Mobile Developer" />
-    <meta name="keywords" content="portfolio Menna Elwan, Menna Elwan, Mobile Developer, Flutter, Android, Java, Kotlin, Dart, Swift" />
-    <meta name="author" content="Menna Elwan" />
-    <link rel="icon" href="images/user-3.jpg" type="image/x-icon" />
-    <link rel="shortcut icon" href="images/user-3.jpg" type="image/x-icon" />
-    <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content="Menna Elwan - Mobile Developer" />
-    <meta property="og:image" content="images/user-3.jpg" />
-    <meta property="og:url" content="https://menna3lwan.github.io" />
-    <meta property="og:site_name" content="Menna Elwan" />
-    <meta property="og:description" content="Portfolio website for Menna Elwan, Mobile Developer specializing in cross-platform app development." />
-    <meta name="twitter:title" content="Menna Elwan - Mobile Developer" />
-    <meta name="twitter:image" content="images/user-3.jpg" />
-    <meta name="twitter:url" content="https://menna3lwan.github.io" />
-    <meta name="twitter:card" content="summary" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="css/animate.css">
-
-    <link rel="stylesheet" href="css/style-animate-heading.css">
-    <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="css/icomoon.css">
-    <!-- Bootstrap  -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
-    <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
-
-    <!-- Theme style  -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""/>
-    <!-- Modernizr JS -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-    <style>
-        #mapid { height: 260px; }
-    </style>
+	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+  	
+	<title>Animated Headlines | CodyHouse</title>
 </head>
-
 <body>
-
-    <div class="fh5co-loader"></div>
-
-    <div id="page">
-        <header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
-            <div class="overlay"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center">
-                        <div class="display-t js-fullheight">
-                            <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-                                <div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-                                <h1><span>Menna Elwan</span></h1>
-                                <span class="cd-intro">
-                                    <span class="cd-headline clip is-full-width">
-                                        <span class="cd-words-wrapper">
-											<b class="is-visible changeboldprop">Mobile Developer</b>
-											<b class="changeboldprop">Cross-Platform App Developer</b>
-										</span>
-                                </span>
-                                </span>
-                                <p>
-                                    <ul class="fh5co-social-icons">
-                                        <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
-                                        <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
-                                        <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
-                                        <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
-                                    </ul>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-
-        <div id="fh5co-about" class="animate-box">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                        <h2>About Me</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <ul class="info">
-                            <li><span class="first-block">Full Name:</span><span class="second-block">Menna Maher Elwan</span></li>
-                            <li><span class="first-block">Phone:</span><span class="second-block">+201127798986</span></li>
-                            <li><span class="first-block">Email:</span><span class="second-block">menna3lwan@gmail.com</span></li>
-                            <li><span class="first-block">Website:</span><span class="second-block"><a href="https://menna3lwan.github.io">menna3lwan.github.io</a></span></li>
-                            <li><span class="first-block">Address:</span><span class="second-block">Qalyub, Alqaliobia, Egypt</span></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-8">
-                        <h2>Hello There!</h2>
-                        <p>I am a Mobile Developer with experience in cross-platform app development using Java, Dart, Kotlin, and Swift. Skilled in optimizing performance, integrating backend services, and enhancing user experience. Committed to delivering high-quality, secure, and scalable apps.</p>
-                        <p>Currently pursuing a degree in Computer Science and Artificial Intelligence at Benha University, expected to graduate in 2026.</p>
-                        <ul class="fh5co-social-icons">
-                            <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
-                            <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
-                            <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
-                            <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Other sections like Resume, Skills, Projects, etc. remain unchanged -->
-
-        <div id="fh5co-started" class="fh5co-bg-dark">
-            <div class="overlay"></div>
-            <div class="container">
-                <div class="row animate-box">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                        <h2>Hire Me!</h2>
-                        <p><a href="https://docs.google.com/document/d/e/2PACX-1vSXK6i8ydfJuDxqoYrL8DVANDnPfCmcoWEK8AzRWKVeDcjGe0bcyoVSGk9JVFGlTVPH24ncjF0gThhn/pub" class="btn btn-default btn-lg">Download CV</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="fh5co-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <p>&copy; All Rights Reserved. <br>Designed by
-                            <a href="https://menna3lwan.github.io" target="_blank">Menna Elwan</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="gototop js-top">
-            <a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
-        </div>
-
-        <!-- jQuery -->
-        <script src="js/jquery.min.js"></script>
-        <!-- jQuery Easing -->
-        <script src="js/jquery.easing.1.3.js"></script>
-        <!-- Animated headlines -->
-        <script src="js/animated-headline.js"></script>
-        <!-- Bootstrap -->
-        <script src="js/bootstrap.min.js"></script>
-        <!-- Waypoints -->
-        <script src="js/jquery.waypoints.min.js"></script>
-        <!-- Stellar Parallax -->
-        <script src="js/jquery.stellar.min.js"></script>
-        <!-- Easy PieChart -->
-        <script src="js/jquery.easypiechart.min.js"></script>
-        <!-- Google Map -->
-        <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
-        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-        crossorigin=""></script>
-        <!-- Main -->
-        <script src="js/main.js"></script>
-        <script>
-            GitHubCalendar(".calendar", "menna3lwan");
-            // or enable responsive functionality
-            GitHubCalendar(".calendar", "menna3lwan", {
-                responsive: true
-            });
-        </script>
-    </div>
+	<section class="cd-title">
+		<h1>Animated Headlines</h1>
+	</section>
+	
+	<section class="cd-intro">
+		<h1 class="cd-headline rotate-1">
+			<span>My favourite food is</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline letters type">
+			<span>My favourite food is</span> 
+			<span class="cd-words-wrapper waiting">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline letters rotate-2">
+			<span>My favourite food is</span> 
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline loading-bar">
+			<span>My favourite food is</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline slide">
+			<span>My favourite food is</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline clip is-full-width">
+			<span>My favourite food is</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline zoom">
+			<span>My favourite food is</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline letters rotate-3">
+			<span>My favourite food is</span> 
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline letters scale">
+			<span>My favourite food is</span> 
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+	<section class="cd-intro">
+		<h1 class="cd-headline push">
+			<span>My favourite food is</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+<script src="js/jquery-2.1.1.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
