--- a/index.html
+++ b/index.html
@@ -52,14 +52,19 @@
 
         /* Expanded profile image area */
         .profile-thumb {
-            width: 200px; /* Increased size */
-            height: 200px; /* Increased size */
-            margin: 0 auto 20px; /* Centered with margin */
+            width: 250px; /* Increased size */
+            height: 250px; /* Increased size */
+            margin: 0 auto 30px; /* Centered with margin */
             background-size: cover;
             background-position: center;
             border-radius: 50%; /* Circular image */
-            border: 4px solid #fff; /* White border */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+            border: 6px solid #fff; /* White border */
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3); /* Subtle shadow */
+        }
+
+        /* Ensure the header section has enough space for the larger image */
+        #fh5co-header {
+            padding: 100px 0; /* Increased padding for more space */
         }
     </style>
 </head>
