--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                 <div class="row">
                     <div class="col-md-4">
                         <ul class="info">
-                            <li><strong>Full Name:</strong> Menna Maher Elwan</li>
-                            <li><strong>Phone:</strong> +201127798986</li>
-                            <li><strong>Email:</strong> <a href="mailto:menna3lwan@gmail.com">menna3lwan@gmail.com</a></li>
-                            <li><strong>Website:</strong> <a href="https://menna3lwan.github.io">menna3lwan.github.io</a></li>
-                            <li><strong>Address:</strong> Qalyub, Alqaliobia, Egypt</li>
+                            <li><span class="first-block">Full Name:</span><span class="second-block">Menna Maher Elwan</span></li>
+                            <li><span class="first-block">Phone:</span><span class="second-block">+201127798986</span></li>
+                            <li><span class="first-block">Email:</span><span class="second-block"><a href="mailto:menna3lwan@gmail.com">menna3lwan@gmail.com</a></span></li>
+                            <li><span class="first-block">Website:</span><span class="second-block"><a href="https://menna3lwan.github.io">menna3lwan.github.io</a></span></li>
+                            <li><span class="first-block">Address:</span><span class="second-block">Qalyub, Alqaliobia, Egypt</span></li>
                         </ul>
                     </div>
                     <div class="col-md-8">
