--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         /* Hire Me Section */
         #fh5co-started {
-            background-color: #333; /* Changed to match the header background */
+            background-color: orange; /* Changed to orange */
             color: #fff;
             padding: 70px 0;
             text-align: center;
@@ -129,7 +129,7 @@
         }
 
         #fh5co-started .btn {
-            background-color: #007bff; /* Changed to match the header background */
+            background-color: #007bff; /* Button background color */
             color: #fff;
             padding: 15px 30px;
             font-size: 16px;
