--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         }
 
         #fh5co-started .btn {
-            background-color: #007bff; /* Button background color */
+            background-color: navy; /* Changed to navy blue */
             color: #fff;
             padding: 15px 30px;
             font-size: 16px;
@@ -139,7 +139,7 @@
         }
 
         #fh5co-started .btn:hover {
-            background-color: #0056b3;
+            background-color: #000080; /* Darker shade of navy blue for hover */
             transform: translateY(-3px);
         }
     </style>
