--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         /* Work With Me Section */
         #fh5co-started {
-            background-color: orange; /* Orange background */
+            background-color: navy; /* Changed to navy blue */
             color: #fff;
             padding: 70px 0;
             text-align: center;
