--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         /* Work With Me Section */
         #fh5co-started {
-            background-color: navy; /* Changed to navy blue */
+            background-color: orange; /* Changed to orange */
             color: #fff;
             padding: 70px 0;
             text-align: center;
@@ -163,7 +163,7 @@
         }
 
         #fh5co-started .btn {
-            background-color: navy; /* Navy blue button */
+            background-color: orange; /* Orange button */
             color: #fff;
             padding: 15px 30px;
             font-size: 16px;
@@ -173,7 +173,7 @@
         }
 
         #fh5co-started .btn:hover {
-            background-color: #000080; /* Darker navy blue on hover */
+            background-color: #e69500; /* Darker orange on hover */
             transform: translateY(-3px);
         }
 
