--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         /* Work With Me Section */
         #fh5co-started {
-            background-color: orange; /* Changed to orange */
+            background-color: navy; /* Changed to navy */
             color: #fff;
             padding: 70px 0;
             text-align: center;
@@ -163,7 +163,7 @@
         }
 
         #fh5co-started .btn {
-            background-color: orange; /* Orange button */
+            background-color: navy; /* Navy button */
             color: #fff;
             padding: 15px 30px;
             font-size: 16px;
@@ -173,13 +173,22 @@
         }
 
         #fh5co-started .btn:hover {
-            background-color: #e69500; /* Darker orange on hover */
+            background-color: #000080; /* Darker navy on hover */
             transform: translateY(-3px);
         }
 
         /* Add this CSS rule to change the text color to navy blue */
         .meena-elvan-text {
             color: navy; /* Navy blue color */
+        }
+
+        /* New CSS rules for navy text in header */
+        .display-tc h1 {
+            color: navy; /* Navy blue for the name */
+        }
+
+        .cd-intro {
+            color: navy; /* Navy blue for the rotating text */
         }
     </style>
 </head>
