--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         /* Work With Me Section */
         #fh5co-started {
-            background-color: navy; /* Changed to navy blue */
+            background-color: orange; /* Orange background */
             color: #fff;
             padding: 70px 0;
             text-align: center;
@@ -175,11 +175,6 @@
         #fh5co-started .btn:hover {
             background-color: #000080; /* Darker navy blue on hover */
             transform: translateY(-3px);
-        }
-
-        /* Add this CSS rule to change the text color to navy blue */
-        .meena-elvan-text {
-            color: navy; /* Navy blue color */
         }
     </style>
 </head>
@@ -217,8 +212,6 @@
                                         <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
                                     </ul>
                                 </p>
-                                <!-- Add the text here with the class for navy blue color -->
-                                <p class="meena-elvan-text">Meena Elvan - in</p>
                             </div>
                         </div>
                     </div>
