--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Merna Elvan</title>
+    <title>Menna Elwan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio website for Merna Elvan, Mobile Developer" />
-    <meta name="keywords" content="portfolio Merna Elvan, Merna Elvan, Mobile Developer, Flutter, Android, Java, Kotlin, Dart, Swift" />
-    <meta name="author" content="Merna Elvan" />
+    <meta name="description" content="Portfolio website for Menna Elwan, Mobile Developer" />
+    <meta name="keywords" content="portfolio Menna Elwan, Menna Elwan, Mobile Developer, Flutter, Android, Java, Kotlin, Dart, Swift" />
+    <meta name="author" content="Menna Elwan" />
     <link rel="icon" href="images/user-3.jpg" type="image/x-icon" />
     <link rel="shortcut icon" href="images/user-3.jpg" type="image/x-icon" />
     <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content="Merna Elvan - Mobile Developer" />
+    <meta property="og:title" content="Menna Elwan - Mobile Developer" />
     <meta property="og:image" content="images/user-3.jpg" />
-    <meta property="og:url" content="https://mernaelvan.github.io" />
-    <meta property="og:site_name" content="Merna Elvan" />
-    <meta property="og:description" content="Portfolio website for Merna Elvan, Mobile Developer specializing in cross-platform app development." />
-    <meta name="twitter:title" content="Merna Elvan - Mobile Developer" />
+    <meta property="og:url" content="https://menna3lwan.github.io" />
+    <meta property="og:site_name" content="Menna Elwan" />
+    <meta property="og:description" content="Portfolio website for Menna Elwan, Mobile Developer specializing in cross-platform app development." />
+    <meta name="twitter:title" content="Menna Elwan - Mobile Developer" />
     <meta name="twitter:image" content="images/user-3.jpg" />
-    <meta name="twitter:url" content="https://mernaelvan.github.io" />
+    <meta name="twitter:url" content="https://menna3lwan.github.io" />
     <meta name="twitter:card" content="summary" />
 
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
@@ -176,11 +176,6 @@
             background-color: #000080; /* Darker navy blue on hover */
             transform: translateY(-3px);
         }
-
-        /* Navy text for specific elements */
-        .navy-text {
-            color: navy;
-        }
     </style>
 </head>
 
@@ -198,9 +193,9 @@
                         <div class="display-t js-fullheight">
                             <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
                                 <div class="profile-thumb">
-                                    <img src="images/user-3.jpg" alt="Merna Elvan">
+                                    <img src="images/user-3.jpg" alt="Menna Elwan">
                                 </div>
-                                <h1 class="navy-text">Merna Elvan - Mobile Development</h1>
+                                <h1><span>Menna Elwan</span></h1>
                                 <span class="cd-intro">
                                     <span class="cd-headline clip is-full-width">
                                         <span class="cd-words-wrapper">
@@ -211,10 +206,10 @@
                                 </span>
                                 <p>
                                     <ul class="fh5co-social-icons">
-                                        <li><a href="https://www.linkedin.com/in/merna-elvan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
-                                        <li><a href="https://github.com/mernaelvan" target="_blank"><i class="icon-github"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                                        <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
                                         <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
-                                        <li><a href="mailto:mernaelvan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
+                                        <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
                                     </ul>
                                 </p>
                             </div>
@@ -236,10 +231,10 @@
                 <div class="row" style="margin-top: 40px;">
                     <div class="col-md-4" style="border-right: 1px solid #ddd; padding-right: 30px;">
                         <ul class="info">
-                            <li><i class="icon-user"></i><span><strong>Full Name:</strong></span> Merna Maher Elvan</li>
+                            <li><i class="icon-user"></i><span><strong>Full Name:</strong></span> Menna Maher Elwan</li>
                             <li><i class="icon-phone"></i><span><strong>Phone:</strong></span> <a href="tel:+201127798986">+201127798986</a></li>
-                            <li><i class="icon-envelope"></i><span><strong>Email:</strong></span> <a href="mailto:mernaelvan@gmail.com">mernaelvan@gmail.com</a></li>
-                            <li><i class="icon-globe"></i><span><strong>Website:</strong></span> <a href="https://mernaelvan.github.io" target="_blank">mernaelvan.github.io</a></li>
+                            <li><i class="icon-envelope"></i><span><strong>Email:</strong></span> <a href="mailto:menna3lwan@gmail.com">menna3lwan@gmail.com</a></li>
+                            <li><i class="icon-globe"></i><span><strong>Website:</strong></span> <a href="https://menna3lwan.github.io" target="_blank">menna3lwan.github.io</a></li>
                             <li><i class="icon-location"></i><span><strong>Address:</strong></span> Qalyub, Alqaliobia, Egypt</li>
                         </ul>
                     </div>
@@ -253,10 +248,10 @@
                         </p>
                         <div style="margin-top: 30px;">
                             <ul class="fh5co-social-icons">
-                                <li><a href="https://www.linkedin.com/in/merna-elvan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
-                                <li><a href="https://github.com/mernaelvan" target="_blank"><i class="icon-github"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                                <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
                                 <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
-                                <li><a href="mailto:mernaelvan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
+                                <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -288,7 +283,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p>&copy; All Rights Reserved. <br>Designed by
-                            <a href="https://mernaelvan.github.io" target="_blank">Merna Elvan</a>
+                            <a href="https://menna3lwan.github.io" target="_blank">Menna Elwan</a>
                         </p>
                     </div>
                 </div>
