--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center">
+                    <div class="col-md-8 text-center"> <!-- Removed offset -->
                         <div class="display-t js-fullheight">
                             <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
                                 <div class="profile-thumb">
@@ -265,13 +265,13 @@
         <div id="fh5co-about" class="animate-box">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                    <div class="col-md-8 text-center fh5co-heading"> <!-- Removed offset -->
                         <h2>About Me</h2>
                         <p>Discover my story, skills, and aspirations.</p>
                     </div>
                 </div>
                 <div class="row" style="margin-top: 40px;">
-                    <div class="col-md-4" style="border-right: 1px solid #ddd; padding-right: 30px;">
+                    <div class="col-md-4" style="border-right: 1px solid #ddd; padding-right: 15px;"> <!-- Reduced padding -->
                         <ul class="info">
                             <li><i class="icon-user"></i><span><strong>Full Name:</strong></span> Menna Maher Elwan</li>
                             <li><i class="icon-phone"></i><span><strong>Phone:</strong></span> <a href="tel:+201127798986">+201127798986</a></li>
@@ -280,7 +280,7 @@
                             <li><i class="icon-location"></i><span><strong>Address:</strong></span> Qalyub, Alqaliobia, Egypt</li>
                         </ul>
                     </div>
-                    <div class="col-md-8" style="padding-left: 30px;">
+                    <div class="col-md-8" style="padding-left: 15px;"> <!-- Reduced padding -->
                         <h3>Hello There!</h3>
                         <p>
                             <span>I</span> <span>am</span> <span>a</span> <span>Mobile</span> <span>Developer</span> <span>with</span> <span>expertise</span> <span>in</span> <span>cross-platform</span> <span>app</span> <span>development</span> <span>using</span> <span><strong>Java</strong></span>, <span><strong>Dart</strong></span>, <span><strong>Kotlin</strong></span>, <span>and</span> <span><strong>Swift</strong></span>. <span>Skilled</span> <span>in</span> <span>optimizing</span> <span>app</span> <span>performance</span>, <span>integrating</span> <span>backend</span> <span>services</span>, <span>and</span> <span>enhancing</span> <span>user</span> <span>experience</span>. <span>I</span> <span>am</span> <span>committed</span> <span>to</span> <span>delivering</span> <span><strong>high-quality</strong></span>, <span><strong>secure</strong></span>, <span>and</span> <span><strong>scalable</strong></span> <span>applications</span> <span>that</span> <span>meet</span> <span>both</span> <span>user</span> <span>needs</span> <span>and</span> <span>business</span> <span>objectives</span>.
@@ -306,7 +306,7 @@
             <div class="overlay"></div>
             <div class="container">
                 <div class="row animate-box">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                    <div class="col-md-8 text-center fh5co-heading"> <!-- Removed offset -->
                         <h2>Work With Me</h2>
                         <p>
                             <span class="cd-headline clip is-full-width">
