--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                         <p>
                             <span class="cd-headline clip is-full-width">
                                 <span class="cd-words-wrapper">
-                                    <b class="is-visible">Let's bring your ideas to life with innovative and efficient mobile app solutions. Whether you’re looking for a complete app design, optimization of your current project, or backend integrations, I’m here to help. Let’s collaborate and create something remarkable together.</b>
-                                    <b>With a passion for innovation and a focus on efficiency, I specialize in delivering top-notch mobile app solutions tailored to your needs. Whether you’re starting from scratch with a complete app design, optimizing an existing project, or integrating advanced backend systems, I’m here to make it happen.</b>
+                                    <b class="is-visible">Let’s transform your ideas into sleek, powerful mobile app solutions that shine. Together, we’ll create something innovative, efficient, and unforgettable.</b>
+                                    <b>From design to optimization and backend integrations, I’ve got you covered. Let’s collaborate and bring your vision to life with excellence.</b>
                                 </span>
                             </span>
                         </p>
