--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                         <p>
                             <span class="cd-headline clip is-full-width">
                                 <span class="cd-words-wrapper">
-                                    <b class="is-visible">Let’s transform your ideas into sleek, powerful mobile app solutions that shine. Together, we’ll create something innovative, efficient, and unforgettable.</b>
-                                    <b>From design to optimization and backend integrations, I’ve got you covered. Let’s collaborate and bring your vision to life with excellence.</b>
+                                    <b class="is-visible">Let’s turn your vision into a seamless, innovative mobile app experience..</b>
+                                    <b>From design to backend, I’ll help create something remarkable with you.</b>
                                 </span>
                             </span>
                         </p>
