--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             <li><i class="icon-user"></i><span><strong>Full Name:</strong></span> Menna Maher Elwan</li>
                             <li><i class="icon-phone"></i><span><strong>Phone:</strong></span> <a href="tel:+201127798986">+201127798986</a></li>
                             <li><i class="icon-envelope"></i><span><strong>Email:</strong></span> <a href="mailto:menna3lwan@gmail.com">menna3lwan@gmail.com</a></li>
-                            <li><i class="icon-globe"></i><span><strong>Website:</strong></span> <a href="https://menna3lwan.github.io" target="_blank">menna3lwan.github.io</a></li>
+                            <li><i class="icon-globe"></i><span><strong>Website:</strong></span> <a href="https://menna3lwan.github.io/Menna_Elwan.github.io/" target="_blank">menna3lwan.github.io</a></li>
                             <li><i class="icon-location"></i><span><strong>Address:</strong></span> Qalyub, Alqaliobia, Egypt</li>
                         </ul>
                     </div>
