--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             </span>
                         </p>
                         <p>
-                            <a href="https://drive.google.com/drive/home/edit?usp=sharing/pub" class="btn btn-default btn-lg">Download My CV</a>
+                            <a href="https://drive.google.com/file/d/19EcWbYRinaymDmb5UsRXXZpx7Deg6IkN/view?usp=sharing/edit?usp=sharing/pub" class="btn btn-default btn-lg">Download My CV</a>
                         </p>
                     </div>
                 </div>
